# MeshWave

./: .gitignore  CMakeLists.txt  LICENSE  README.md  projectdocument.md
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  BUILDING.md  PROTOCOL.md
scripts/: embed_html.py
src/: client.c  client.h  discovery.c  discovery.h  http.cpp  http.h  main.cpp  protocol.h  server.c  server.h  transfer.c  transfer.h  util.c  util.h
web/: index.html
